[PostFlags] Fix reason overflow

--- a/app/javascript/src/styles/specific/post_flags.scss
+++ b/app/javascript/src/styles/specific/post_flags.scss
@@ -1,7 +1,9 @@
-
-
 div#c-post-flags {
   tr.resolved-false {
     background: $post-flags-unresolved-background !important;
+  }
+
+  .flag-reason-title, .flag-reason-text {
+    white-space: pre-wrap;
   }
 }
